--- a/styles/scss/_user.scss
+++ b/styles/scss/_user.scss
@@ -1,5 +1,11 @@
-// 
-// 
+//
+//
 // user.scss
 //
 // Place your own theme CSS or SCSS rules below this line, these rules will override any Bootstrap and theme variables.
+
+nav.not-top {
+  background-color: rgba(249, 250, 253, 0.035);
+  backdrop-filter: blur(4px);
+  box-shadow: 0 1.5625rem 2.8125rem rgba(47, 46, 65, 0.075);
+}
