--- a/styles/scss/_user.scss
+++ b/styles/scss/_user.scss
@@ -9,3 +9,36 @@ nav.not-top {
   backdrop-filter: blur(4px);
   box-shadow: 0 1.5625rem 2.8125rem rgba(47, 46, 65, 0.075);
 }
+
+#experienceSlider {
+  padding-bottom: 50px;
+  .swiper-pagination-bullet {
+    box-sizing: content-box;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    width: 22px;
+    height: 3px;
+    padding: 0;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #3984f3;
+    background-clip: padding-box;
+    border: 0;
+    border-top: 0 solid transparent;
+    border-bottom: 0 solid transparent;
+    opacity: 0.5;
+    -webkit-transition: opacity 0.6s ease;
+    -o-transition: opacity 0.6s ease;
+    transition: opacity 0.6s ease;
+    border-radius: 0;
+    &.swiper-pagination-bullet-active {
+      opacity: 1;
+      background-color: #3984f3;
+      width: 28px;
+      height: 3px;
+    }
+  }
+}
